@@ -38,9 +38,12 @@ let show_tests () =
 
 let log_to_stderr = ref false
 
+let promote = ref false
+
 let commandline_options =
 [
   ("-e", Arg.Set log_to_stderr, "Log to stderr instead of a file.");
+  ("-promote", Arg.Set promote, "Overwrite reference files with the test output");
   ("-show-actions", Arg.Unit show_actions, "Show available actions.");
   ("-show-tests", Arg.Unit show_tests, "Show available tests.");
 ]
